Update gamasamaga project description

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -71,7 +71,8 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material and for back-end we used Ruby on Rails. Previously for front-end, I worked mainly with HTML and CSS and for back-end I workder with PHP so I had to learn more Javascript and Ruby on Rails.</p>
+				<p>This is a web application developed for SLPP. This apllication has a simple front-end where users can sign in or sign up and submit an idea or a proposal. Users should be able to input ideas or proposal in three different languages which are Sinhala, Tamil and English therefor my senior came up with using a custom Angular Material input suing Google's transliteration service which detects and transliterate to the selected language from English input. Back-end (admin dashboard) was the challenging phase of the development. Admin dashboard had to allow multiple user types, contain all the data of the users and the data which are entered by operators.</p>
+				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material and for back-end we used Ruby on Rails. Previously for front-end, I worked mainly with HTML and CSS and for back-end I worked with PHP so I had to learn more Javascript and Ruby on Rails.</p>
 				<p>There were some visual guidelines created by my teammate but there was dedicated time to building a design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
 				<h6><strong>View web application: </strong><a href="https://www.gamasamaga.com/en/home" class="live-link" target="_blank">gamasamaga.com</a></h6>
 			</div>
