Add Google analytics tracking code to the pages

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>Contact me | Salman Azeez</title>
+    <!-- Google analytics tracking code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="I am avaialbe anytime of the day so you can reach me through anyway you wiash to contact me. Let's get in touch.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, contact me, contact, conversation">
