--- a/works.html
+++ b/works.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>Personal Portfolio | Web Developer | Front-End Developer</title>
+    <!-- Google analytics tracking code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Projects which are done and dusted. There were Angular, Ruby on Rails, Laravel, etc... project I have worked and this page includes all of them. These projects will give an idea of me.">
     <meta name="keywords" content="portfolio, works, projects, experiences, web applications, frameworks">
