--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>About me | Salman Azeez</title>
+    <!-- Google analytics tracking code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Know about me and what I am capable of. Details of what I know and experiences. This is a short intro of me and my career.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, software, software engineer">
