--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 	<title>A dialogue with the village</title>
+	<!-- Google analytics tracking code -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="A dialogue with the village">
 	<meta property="og:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places." />
