--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,17 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
     </script>
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WVX6XFN');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="I am avaialbe anytime of the day so you can reach me through anyway you wiash to contact me. Let's get in touch.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, contact me, contact, conversation">
@@ -18,6 +29,12 @@
     <link rel="stylesheet" href="css/contact.css" type="text/css">
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVX6XFN" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
