Add BT Options project to website

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>A dialogue with the village</title>
+	<title>A dialogue with the village | Web Application</title>
 	<!-- Google analytics tracking code -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
 	<script>
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places." />
 	<meta name="og:A dialogue with the village" property="og:title" content="A dialogue with the village">
 	<meta name="og:A dialogue with the village" property="og:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
-	<meta property="og:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
+	<meta property="og:image" content="https://salmanazeez.github.io/img/projects/gamasamaga/home.jpg">
 	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
 	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
 	<!-- Twitter card -->
@@ -22,7 +22,7 @@
 	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
 	<meta name="twitter:title" content="A dialogue with the village: Web Application">
 	<meta name="twitter:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places.">
-	<meta name="twitter:image" content="https://salmanazeez.github.io/img/gamasamaga/home.jpg">
+	<meta name="twitter:image" content="https://salmanazeez.github.io/img/projects/gamasamaga/home.jpg">
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!-- Resource links -->
@@ -69,7 +69,7 @@
 	<section>
 		<div class="row text-center">
 			<div class="col-12">
-				<img src="../img/gamasamaga/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+				<img src="../img/projects/gamasamaga/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
 			</div>
 		</div>
 	</section>
@@ -90,14 +90,14 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<img src="../img/gamasamaga/home.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/about.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/idea1.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/idea2.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/proposal.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/sign-up.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/login.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
-				<img src="../img/gamasamaga/profile.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
 			</div>
 		</div>
 	</section>
