--- a/works.html
+++ b/works.html
@@ -62,6 +62,7 @@
     <!-- Cards -->
     <section class="p-md-5 d-flex justify-content-center card-section">
         <div class="row">
+            <!-- A dialogue with the village -->
             <div class="col-12 col-md-6 card-container">
                 <a href="projects/gamasamaga.html">
                     <div class="card" id="product-card">
@@ -73,6 +74,22 @@
                             <p class="card-text project-type">Web Application</p>
                             <p class="card-text project-tech-title">Technologies</p>
                             <span class="card-text project-technologies">Angular 8, Anugular Material, AWS, Ruby on Rails</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- BT Options -->
+            <div class="col-12 col-md-6 card-container">
+                <a href="projects/btoptions.html">
+                    <div class="card" id="product-card">
+                        <div class="image-overlay" class="d-none d-sm-block"></div>
+                        <a href="projects/btoptions.html" id="view_details" class="d-none d-sm-block">View project</a>
+                        <img src="img/works/btoptions.jpg" class="card-img-top" alt="Project card image">
+                        <div class="card-body">
+                            <h5 class="card-title project-name">BT Options</h5>
+                            <p class="card-text project-type">Content Management System (CMS)</p>
+                            <p class="card-text project-tech-title">Technologies</p>
+                            <span class="card-text project-technologies">WordPress, WooCommerce, PHP</span>
                         </div>
                     </div>
                 </a>
