Fix margin on projects

--- a/about.html
+++ b/about.html
@@ -201,6 +201,7 @@
 
     <!-- Frameworks and technologies -->
     <div class="col-12 p-3">
+        <h3 class="mb-4 hideme">Technologies and tools</h3>
         <img src="img/about/frameworks.png" class="img-fluid" alt="Frameworks and technologies">
     </div>
 
