--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -90,21 +90,21 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12 text-center">
-				<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Homepage</i></label>
-				<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>About page</i></label>
-				<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Select idea page</i></label>
-				<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Submit idea page</i></label>
-				<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Submit proposal page</i></label>
-				<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>User sign up page</i></label>
-				<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>User login page</i></label>
-				<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>User profile page</i></label>
 			</div>
 		</div>
