--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -90,21 +90,21 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<img src="../img/projects/btoptions/home.png" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/home.png" class="img-fluid" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Homepage</i></label>
-				<img src="../img/projects/btoptions/magazines.png" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/magazines.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Magazines page</i></label>
-				<img src="../img/projects/btoptions/btactive.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/btactive.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>BT Active page</i></label>
-				<img src="../img/projects/btoptions/hotels.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/hotels.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Hotels page</i></label>
-				<img src="../img/projects/btoptions/store.jpg" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/store.jpg" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>BT Store page</i></label>
-				<img src="../img/projects/btoptions/about.png" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/about.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>About page</i></label>
-				<img src="../img/projects/btoptions/contact.png" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/contact.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Contact page</i></label>
-				<img src="../img/projects/btoptions/subscription.png" class="img-fluid mb-3" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/subscription.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>WooCommerce subscription page</i></label>
 			</div>
 		</div>
