--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -90,7 +90,7 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12">
-				<img src="../img/projects/btoptions/home.png" class="img-fluid" alt="Screenshot of the website">
+				<img src="../img/projects/btoptions/home.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Homepage</i></label>
 				<img src="../img/projects/btoptions/magazines.png" class="img-fluid mt-3" alt="Screenshot of the website">
 				<label class="secondary-text"><i>Magazines page</i></label>
