--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -91,21 +91,21 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>Homepage</i></label>
+				<label><i class="secondary-text">Homepage</i></label>
 				<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>About page</i></label>
+				<label><i class="secondary-text">About page</i></label>
 				<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>Select idea page</i></label>
+				<label><i class="secondary-text">Select idea page</i></label>
 				<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>Submit idea page</i></label>
+				<label><i class="secondary-text">Submit idea page</i></label>
 				<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>Submit proposal page</i></label>
+				<label><i class="secondary-text">Submit proposal page</i></label>
 				<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>User sign up page</i></label>
+				<label><i class="secondary-text">User sign up page</i></label>
 				<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>User login page</i></label>
+				<label><i class="secondary-text">User login page</i></label>
 				<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label class="secondary-text"><i>User profile page</i></label>
+				<label><i class="secondary-text">User profile page</i></label>
 			</div>
 		</div>
 	</section>
