--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -89,7 +89,7 @@
 	<!-- Project screenshots -->
 	<section class="p-3 p-md-5">
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 text-center">
 				<img src="../img/projects/btoptions/home.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
 				<label><i class="secondary-text">Homepage</i></label>
 				<img src="../img/projects/btoptions/magazines.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
