--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
     <!-- End Google Tag Manager -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Know about me and what I am capable of. Details of what I know and experiences. This is a short intro of me and my career.">
-    <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, software, software engineer">
+    <meta name="description" content="Know about my web development skills, web frameworks and technologies. A detailed version of me as a web developer.">
+    <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, web design, website design, web designer, software, software engineer, web de, how to become a web developer, how to develop a web site">
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
