--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is a personal portfolio website of mine. This portfolio website contains all the details of me and the projecs I have worked on.">
-  <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, software, software engineer">
+  <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, web design, website design, web designer, software, software engineer, web de, how to become a web developer, how to develop a web site">
   <!-- Twitter card -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="https://salmanazeez.github.io">
