Fix google analytics code snippet

--- a/about.html
+++ b/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About me | Salman Azeez</title>
-    <!-- Google analytics tracking code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
     </script>
 
     <!-- Google Tag Manager -->
@@ -20,6 +21,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <title>About me | Salman Azeez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Know about my web development skills, web frameworks and technologies. A detailed version of me as a web developer.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, web design, website design, web designer, software, software engineer, web de, how to become a web developer, how to develop a web site">
