--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html class="animated fadeIn">
 <head>
-  <title>Web Developer | Front-End Developer</title>
-  <!-- Google analytics tracking code -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
+	</script>
 
   <!-- Google Tag Manager -->
   <script>
@@ -20,6 +21,7 @@
   </script>
   <!-- End Google Tag Manager -->
 
+  <title>Web Developer | Front-End Developer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is a personal portfolio website of mine. This portfolio website contains all the details of me and the projecs I have worked on.">
