--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BT Options | WordPress</title>
-	<!-- Google analytics tracking code -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
 	</script>
+
+	<title>BT Options | WordPress</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="BT Options | WordPress">
 	<meta property="og:description" content="A WordPress site which includes all the information of the BT Options company. This WordPress site has a cool and simple theme." />
