--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact me | Salman Azeez</title>
-    <!-- Google analytics tracking code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
     </script>
 
     <!-- Google Tag Manager -->
@@ -20,6 +21,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <title>Contact me | Salman Azeez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="I am avaialbe anytime of the day so you can reach me through anyway you wish to contact me. Let's get in touch.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, web design, website design, web designer contact me, contact, conversation, web de, how to become a web developer, how to develop a web site">
