--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>A dialogue with the village | Web Application</title>
-	<!-- Google analytics tracking code -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
 	</script>
+	
+	<title>A dialogue with the village | Web Application</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="A dialogue with the village">
 	<meta property="og:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places." />
