--- a/works.html
+++ b/works.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Personal Portfolio | Web Developer | Front-End Developer</title>
-    <!-- Google analytics tracking code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153411144-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-153411144-1');
+	</script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -20,6 +21,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <title>Personal Portfolio | Web Developer | Front-End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Projects and applications which are done and dusted. There were Angular, Ruby on Rails, Laravel, etc... project I have worked and this page includes all of them. These projects will give an idea of me.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, web design, website design, web designer, software, software engineer, web de, how to become a web developer, how to develop a web site">
