--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         <a href="https://www.instagram.com/salman_azeez/?hl=en" target="_blank" class="weblink-logo">
                             <img class="weblink-logo-img" src="img/contact/instagram.png">
                         </a>
-                        <a href="#" target="_blank" class="weblink-logo">
+                        <a href="https://www.facebook.com/salmanazeez15" target="_blank" class="weblink-logo">
                             <img class="weblink-logo-img" src="img/contact/facebook.png">
                         </a>
                         <a href="https://twitter.com/SalmanAzeez9" target="_blank" class="weblink-logo">
