Upload corrected web contents

--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2019 - Present</p>
-                <hp>I started my career as a fresher after my graduation. Joined as trainee web developer and have learnt about the industry. I was in-charge of company websites. Later on I worked as a junior web developer on a web application with my senior. Currently working as a web developer on our new project.</hp>
+                <p>I initiated my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with my senior, and I stand currently working as a web developer on our new project.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
@@ -210,7 +210,7 @@
     <!-- Social media links -->
     <div class="social-media-container p-3 p-md-5">
         <div class="text-center">
-            <label class="hideme social-description">Seriously, I wouldn't recommend you to visit my social media accounts if you are expecting it to be a professional newsfeed. All I do is share memes and inspirational posts. That's what I use social media for. Sometimes post a good picture to preserve memories.</label>
+            <label class="hideme social-description">Well, I wouldn't recommend you to visit my social media accounts if you are expecting it to be a professional newsfeed. All I do is share memes and inspirational posts. That's what I use social media for. Sometimes post an excellent picture to cherish memories.</label>
         </div>
         <div class="weblinks-container col-12 p-3">
             <a href="https://www.instagram.com/salman_azeez/?hl=en" target="_blank" class="weblink-logo">
