Update homepage texts

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     <div class="row">
       <div class="col-md-5 col-sm-3"></div>
       <div class="caption col-md-7 col-sm-9 mt-5">
-        <h4 class="">hello,</h4>
+        <h4 class="">Hi there,</h4>
         <h1>I'm Salman</h1>
         <div class="sub mt-4">
           <p>This is me</p>
         </div>
-        <p class="mt-4">My name is Salman Azeez. I'm a Front-End/Web Developer from Kandy, Sri Lanka.</p>
+        <p class="mt-4">I'm Salman Azeez. I'm a professional front-end/web developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
           <a href="works.html"><button class="btn btn-danger works mt-3">Works</button></a>
           <a href="contact.html"><button class="btn btn-outline-light contact mt-3">Contact me</button></a>
