--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="row">
       <div class="col-md-5 col-sm-3"></div>
       <div class="caption col-md-7 col-sm-9 mt-5">
-        <h4>Hi there,</h4>
+        <h4>hi there,</h4>
         <h1>I'm Salman</h1>
         <div class="sub mt-4">
           <p>This is me</p>
