--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 <h1>About <span class="me-span">me</span></h1>
                 <p class="sub-heading text-center">I love coding! <span class="secondary-heading">Yes, I mean it!</span></p>
             </div>
-            <div class="col-sm-12 col-md-4 p-5 text-center">
+            <div class="col-sm-12 col-md-4 p-5 text-center align-self-center">
                 <img src="img/about/mine.JPG" class="img-fluid" alt="placeholder">
             </div>
             <div class="col-sm-12 col-md-8 p-3 p-md-5 introduction-text">
