--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                 <p>Hi there, I'm Salman Azeez from Sri Lanka. I'm a professional web developer <strong>specialized in front-end development.</strong> I love designing websites to deliver the best for my clients. As a professional web developer, my experience and commitment towards my projects has enabled me to design websites with <strong>increased performance and speed, create great traffic, rank high in the search engines and helped me in coding a W3C compliant website.</strong></p>
                 <p>Creating top websites was my vision which turned to reality. And that was possible when my skills and knowledge across various platforms came in-hand and paved my way towards <strong>comprehending the marketing tactics, to design websites</strong> that differentiates it from other competitors. <strong>It also allows me to focus strictly on the originality to brand a business, while still meeting the expectations of the industry and niche area so that it stands apart from the crowd.</strong></p>
                 <p>Specializing in this industry has parallelly encouraged me in enhancing my knowledge and skills in the field of <strong>cross-platform app development</strong>, digital marketing, search engine optimization and web analytics. Delving deep into this fantastic industry has enabled me <strong>to deliver the best output according to the given requirements before the deadline.</strong> I can learn new things rapidly, and I'm adaptable to cope with new trends excellently.</p>
-                <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza etc. I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> TV series.</p>
+                <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza and I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> - TV series.</p>
                 <div class="resume-download">
                     <a href="pdf/Salman Azeez.pdf" target="_blank"><button type="button" class="btn btn-danger">Download resume <span class="fa fa-download"></span></button></a>
                 </div>
@@ -91,19 +91,19 @@
             <div class="col-sm-12 col-md-4 mt-3">
                 <label>Front-end development</label>
                 <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4 mt-3">
-                <label>UI/UX</label>
-                <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 mt-3">
                 <label>Back-end development</label>
                 <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 55%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 mt-3">
+                <label>UI/UX</label>
+                <div class="progress">
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 45%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
                         <span><i class="fa fa-css3" aria-hidden="true"></i> CSS</span>
                     </div>
                     <div class="col-sm-6 col-md-4 text-center mt-3 hideme">
-                        <div class="progress-container"  data-percent="70">
+                        <div class="progress-container"  data-percent="75">
                             <svg class="progress-radial" width="178" height="178" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                 <circle r="80" cx="89" cy="89" fill="transparent" stroke-dasharray="502.4" stroke-dashoffset="0" ></circle>
                                 <circle class="bar" r="80" cx="89" cy="89" fill="transparent" stroke-dasharray="502.4" stroke-dashoffset="0"></circle>
@@ -167,7 +167,7 @@
                         <span><i class="fa fa-css3" aria-hidden="true"></i> CSS</span>
                     </div>
                     <div class="col-sm-6 col-md-4 text-center mt-3 hideme">
-                        <div class="progress-container"  data-percent="70">
+                        <div class="progress-container"  data-percent="75">
                             <svg class="progress-radial" width="178" height="178" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                 <circle r="60" cx="89" cy="89" fill="transparent" stroke-dasharray="502.4" stroke-dashoffset="0" ></circle>
                                 <circle class="bar" r="60" cx="89" cy="89" fill="transparent" stroke-dasharray="502.4" stroke-dashoffset="0"></circle>
@@ -196,7 +196,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2019 - Present</p>
-                <p>I initiated my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with my senior, and I stand currently working as a web developer on our new project.</p>
+                <p>I started off my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with the senior, and I stand currently working as a web developer on our new project.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
