Create blog page and add maintence for blog page

--- a/works.html
+++ b/works.html
@@ -55,6 +55,9 @@
                     <a class="nav-link" href="works.html">Works</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="maintenance.html">Blogs</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact me</a>
                 </li>
             </ul>
