--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="works.html">Works</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="maintenance.html">Blogs</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact me</a>
                 </li>
