--- a/blogs.html
+++ b/blogs.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+    <title>Blogs | Salman Azeez</title>
+    <link rel="shortcut icon" href="../img/favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/blog.css">
 </head>
 <body>
+    <section class="blog-container p-3 p-md-5">
+        <div class="row">
+            <div class="col-12 col-md-4 blog-title-container text-center">
+                <h3 class="blog-title">Blogs</h3>
+            </div>
+            <div class="col-12 col-md-8">
+                <div class="card-columns blog-columns">
+                    <div class="card">
+                        <img src="https://i.ytimg.com/vi/_GiXOVMii48/maxresdefault.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title that wraps to a new line</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://i.ytimg.com/vi/_GiXOVMii48/maxresdefault.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
