--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -108,6 +108,16 @@
 		</div>
 	</section>
 
+	<!-- Technologies and tools -->
+	<section class="p-3 p-md-5">
+		<div class="row">
+			<div class="col-12">
+				<h5>Technologies and tools</h5>
+				<p class="secondary-text">WordPress, WooCommerce, PHP</p>
+			</div>
+		</div>
+	</section>
+
 	<!-- Project screenshots -->
 	<section class="p-3 p-md-5">
 		<div class="row">
@@ -128,15 +138,6 @@
 				<label><i class="secondary-text">Contact page</i></label>
 				<img src="../img/projects/btoptions/subscription.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
 				<label><i class="secondary-text">WooCommerce subscription page</i></label>
-			</div>
-		</div>
-	</section>
-
-	<section class="p-3 p-md-5">
-		<div class="row">
-			<div class="col-12">
-				<h5>Technologies and tools</h5>
-				<p class="secondary-text">WordPress, WooCommerce, PHP</p>
 			</div>
 		</div>
 	</section>
