--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -108,6 +108,16 @@
 		</div>
 	</section>
 
+	<!-- Technologies and tools -->
+	<section class="p-3 p-md-5">
+		<div class="row">
+			<div class="col-12">
+				<h5>Technologies and tools</h5>
+				<p class="secondary-text">Angular, Angular Material, Ruby on Rails, AWS, MongoDB, GitKraken, VS Code</p>
+			</div>
+		</div>
+	</section>
+
 	<!-- Project screenshots -->
 	<section class="p-3 p-md-5">
 		<div class="row">
@@ -132,14 +142,6 @@
 		</div>
 	</section>
 
-	<section class="p-3 p-md-5">
-		<div class="row">
-			<div class="col-12">
-				<h5>Technologies and tools</h5>
-				<p class="secondary-text">Angular, Angular Material, Ruby on Rails, AWS, MongoDB, GitKraken, VS Code</p>
-			</div>
-		</div>
-	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
