Add bt publisher project page and assets

--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -104,14 +104,6 @@
 				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material and for back-end we used Ruby on Rails. Previously for front-end, I worked mainly with HTML and CSS and for back-end I worked with PHP so I had to learn more Javascript and Ruby on Rails.</p>
 				<p>There were some visual guidelines created by my teammate but there was dedicated time to building a design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
 				<p><strong>Live application: </strong><a href="https://www.gamasamaga.com/en/home" class="live-link" target="_blank">gamasamaga.com</a></h6>
-			</div>
-		</div>
-	</section>
-
-	<!-- Technologies and tools -->
-	<section class="p-3 p-md-5">
-		<div class="row">
-			<div class="col-12">
 				<h5>Technologies and tools</h5>
 				<p class="secondary-text">Angular, Angular Material, Ruby on Rails, AWS, MongoDB, GitKraken, VS Code</p>
 			</div>
@@ -122,22 +114,38 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12 text-center">
-				<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Homepage</i></label>
-				<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">About page</i></label>
-				<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Select idea page</i></label>
-				<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Submit idea page</i></label>
-				<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Submit proposal page</i></label>
-				<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">User sign up page</i></label>
-				<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">User login page</i></label>
-				<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">User profile page</i></label>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Homepage</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">About page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Select idea page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Submit idea page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Submit proposal page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">User sign up page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">User login page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">User profile page</i></label>
+				</div>
 			</div>
 		</div>
 	</section>
