--- a/works.html
+++ b/works.html
@@ -83,6 +83,22 @@
                     </div>
                 </a>
             </div>
+            <!-- BT publisher -->
+            <div class="col-12 col-md-6 card-container">
+                <a href="projects/bt-publisher.html">
+                    <div class="card" id="product-card">
+                        <div class="image-overlay" class="d-none d-sm-block"></div>
+                        <a href="projects/bt-publisher.html" id="view_details" class="d-none d-sm-block">View project</a>
+                        <img src="img/works/bt-publisher.jpg" class="card-img-top" alt="Project card image">
+                        <div class="card-body">
+                            <h5 class="card-title project-name">Business Today</h5>
+                            <p class="card-text project-type">Publisher website</p>
+                            <p class="card-text project-tech-title">Technologies</p>
+                            <span class="card-text project-technologies">ZURB Foundation, Laravel, Sass, MySQL</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <!-- BT Options -->
             <div class="col-12 col-md-6 card-container">
                 <a href="projects/btoptions.html">
