--- a/projects/btoptions.html
+++ b/projects/btoptions.html
@@ -104,14 +104,6 @@
 				<p>Company website had to carry information of the company and what they do yet it has to have the functionality of subscribing to company magazines through online. Giving consideration to what functionality and feature website needed, concluded to build a WordPress site. I picked the Cream Magazine theme for the site and Elementor plugin as a page builder. Pages of the website was build using Elementor page builder. Website had to have the feature of letting the customers to contact the company through a contact form therefore I used Ninja Forms and configured upto the needs.</p>
 				<p>Subscription part was the hard-pressed phase since it had to contain all the previous subscription details without any lose of data. On the previous HTML website, subscription page was built using PHP and transactions were bit complicated at times. Company had an old WordPress WooCommerce subscriptions site which was not maintained or was upto date. I disabled the PHP subscription page and enabled the WooCommerce after backing up, updating it accordingly and testing it.</p>
 				<p><strong>Live site: </strong><a href="http://btoptions.com/" class="live-link" target="_blank">btoptions.com</a></h6>
-			</div>
-		</div>
-	</section>
-
-	<!-- Technologies and tools -->
-	<section class="p-3 p-md-5">
-		<div class="row">
-			<div class="col-12">
 				<h5>Technologies and tools</h5>
 				<p class="secondary-text">WordPress, WooCommerce, PHP</p>
 			</div>
@@ -122,22 +114,38 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12 text-center">
-				<img src="../img/projects/btoptions/home.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Homepage</i></label>
-				<img src="../img/projects/btoptions/magazines.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Magazines page</i></label>
-				<img src="../img/projects/btoptions/btactive.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">BT Active page</i></label>
-				<img src="../img/projects/btoptions/hotels.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Hotels page</i></label>
-				<img src="../img/projects/btoptions/store.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">BT Store page</i></label>
-				<img src="../img/projects/btoptions/about.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">About page</i></label>
-				<img src="../img/projects/btoptions/contact.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">Contact page</i></label>
-				<img src="../img/projects/btoptions/subscription.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
-				<label><i class="secondary-text">WooCommerce subscription page</i></label>
+				<div class="sreenshot-container"></div>
+					<img src="../img/projects/btoptions/home.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Homepage</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/magazines.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Magazines page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/btactive.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">BT Active page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/hotels.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Hotels page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/store.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">BT Store page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/about.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">About page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/contact.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">Contact page</i></label>
+				</div>
+				<div class="sreenshot-container">
+					<img src="../img/projects/btoptions/subscription.png" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<label><i class="img-caption">WooCommerce subscription page</i></label>
+				</div>
 			</div>
 		</div>
 	</section>
