Add architerual blog

--- a/blogs.html
+++ b/blogs.html
@@ -45,21 +45,13 @@
                 <div class="card-columns blog-columns">
                     <a href="maintenance.html">
                         <div class="card">
-                            <img src="img/blogs/custom-nav.jpg" class="card-img-top" alt="...">
+                            <img src="img/blogs/architecture/home.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                            <h5 class="card-title">Customize React theme</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">React Web App</h5>
+                            <p class="card-text">An architectural web app template built using React and Material UI</p>
                             </div>
                         </div>
                     </a>
-                    <!-- <a href="maintenance.html">
-                        <div class="card">
-                            <img src="https://i.ytimg.com/vi/_GiXOVMii48/maxresdefault.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                    </a> -->
                 </div>
             </div>
         </div>
