Add architecture web page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a class="nav-link" href="works.html">Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="maintenance.html">Blogs</a>
+          <a class="nav-link" href="blogs.html">Blogs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact me</a>
