--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="works.html">Works</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="maintenance.html">Blogs</a>
+                    <a class="nav-link" href="blogs.html">Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact me</a>
@@ -43,7 +43,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="card-columns blog-columns">
-                    <a href="maintenance.html">
+                    <a href="blogs/architecture-app.html">
                         <div class="card">
                             <img src="img/blogs/architecture/home.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
