--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     <a class="nav-link" href="works.html">Works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="maintenance.html">Blogs</a>
+                    <a class="nav-link" href="blogs.html">Blogs</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact me</a>
